Update start.sh
Added restart if crash and Aikar's Flags.